<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="stock_hawk">STOCK HAWK</string>
    <string name="build_bigger">BUILD IT BIGGER</string>
    <string name="material_app">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiquitous">GO UBIQUITOUS</string>
    <string name="my_app">CAPSTONE:MY OWN APP </string>

</resources>