<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#2E3D49"
    tools:context="com.irk.myappportfolio.MainActivity">

    <TextView
        android:text="My Nanodegree Apps"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

    <Button
        android:text="@string/popular_movies"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMovies"
        android:background="#F08C35"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:onClick="sendMovies"/>
    <Button
        android:text="@string/stock_hawk"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonHawk"
        android:background="#F08C35"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:onClick="sendHawk"/>
    <Button
        android:text="@string/build_bigger"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBigger"
        android:background="#F08C35"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:onClick="sendBigger"/>
    <Button
        android:text="@string/material_app"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMaterial"
        android:background="#F08C35"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:onClick="sendMaterial"/>
    <Button
        android:text="@string/go_ubiquitous"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonUbiquitous"
        android:background="#F08C35"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:onClick="sendUbiquitous"/>
    <Button
        android:text="@string/my_app"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMyApp"
        android:background="#F08C35"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:onClick="sendMyApp"/>
</LinearLayout>
